<resources>
    <string name="app_name">Discovery</string>
    <string name="app_search">Apps</string>
    <string name="video_search">Videos</string>
    <string name="app_status_discrible_male">A boy is using</string>
    <string name="app_status_discrible_female">A girl is using</string>
    <string name="discovery_radar_icon_corner_subscription">Followed</string>
    <string name="discovery_guide_title">Wellcome to Discovery</string>
    <string name="discovery_guide_start">Start</string>
    <string name="discovery_guide_secret_gender_text">Secret</string>
    <string name="discovery_guide_male_gender_text">Male</string>
    <string name="discovery_guide_female_gender_text">Female</string>
    <string name="discovery_pref_select_your_gender">Select your gender</string>
    <string name="discovery_sample_app_description">The App someone is using</string>
    <string name="distance">Distance</string>
    <string name="distance_km">km</string>
    <string name="distance_mi">%d m</string>
    <string name="discovery_guide_meet_friends">Meet friends nearby</string>
    <string name="has_userd">%d Users</string>
    <string name="has_users">Users</string>

    <string name="discovery_dialog_type_connection_error_btn_cancel">CANCEL</string>
    <string name="discovery_dialog_type_connection_error_btn_settings">SETTINGS</string>
    <string name="discovery_dialog_type_connection_error_btn_try_again">TRY AGAIN</string>
    <string name="discovery_dialog_type_connection_error_content">Unable to connect with the server.Check your internet connection and try again</string>
    <string name="discovery_dialog_type_connection_error_title">Connection Error</string>
    <string name="discovery_dialog_type_connection_retry">Retry</string>
    <string name="discovery_dialog_type_connection_error_msg">Unable to connect with the server, Please retry</string>

    <string name="software_share_text">Freeme Launcher:beautiful launcher with fast speed and good use experience, just try it.https://play.google.com/store/apps/details?id=com.freeme.freemelite.odm</string>
    <string name="software_share_titile">share</string>
</resources>
