<?xml version="1.0" encoding="utf-8"?>
<com.freeme.discovery.view.GuideView
    android:orientation="vertical"
    android:id="@+id/guide_root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/discovery_guide_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/c_padding"
        android:layout_marginRight="@dimen/c_padding"
        >


        <TextView
            android:textSize="@dimen/c_text_size_title"
            android:gravity="center"
            android:id="@+id/discovery_guide_title"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_marginTop="@dimen/status_bar_height"
            android:text="@string/discovery_guide_title"
            android:textColor="@color/discovery_theme_color"
            android:singleLine="true"
            android:layout_weight="1.0"
            android:lineSpacingExtra="4.0dip" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/discovery_guide_bg"
            android:padding="16.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/discovery_guide_root_view_margin"
            android:layout_marginRight="@dimen/discovery_guide_root_view_margin"
            android:minWidth="@dimen/discovery_guide_background_width"
            android:minHeight="@dimen/discovery_guide_background_height"
            android:background="@drawable/discovery_guide">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/discovery_guide_content_margin_h"
                android:layout_marginTop="@dimen/discovery_guide_content_margin_v"
                android:layout_marginRight="@dimen/discovery_guide_content_margin_h"
                android:layout_marginBottom="@dimen/discovery_guide_content_margin_v">
                <TextView
                    android:textSize="14.0sp"
                    android:gravity="top"
                    android:id="@+id/discovery_guide_rule"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2.0dip"
                    android:textColor="@color/discovery_theme_color"
                    android:text="@string/discovery_guide_meet_friends"/>
                <FrameLayout android:gravity="center_horizontal"
                    android:id="@+id/discovery_sample_container"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16.0dip"
                    android:layout_marginTop="50.0dip">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/discovery_gui_sample"/>
                    <!--
                    <TextView
                        android:textSize="12.0sp"
                        android:gravity="center|left"
                        android:id="@+id/discovery_guide_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="78.0dip"
                        android:layout_marginTop="12.0dip"
                        android:text="@string/distance"
                        android:drawablePadding="8.0dip" />
                    <TextView
                        android:textSize="12.0sp"
                        android:gravity="center|left"
                        android:id="@+id/discovery_guide_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="52.0dip"
                        android:layout_marginTop="72.0dip"
                        android:text="@string/discovery_sample_app_description"
                        android:maxLines="3" android:drawablePadding="8.0dip"/>
                        -->
                </FrameLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50.0dip">
                    <TextView
                        android:textSize="10.0sp"
                        android:id="@+id/discovery_gender_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discovery_pref_select_your_gender"
                        android:textColor="@color/discovery_theme_color"
                        android:singleLine="true"
                        android:textAllCaps="true" />
                    <View
                        android:id="@+id/discovery_gender_line"
                        android:layout_width="fill_parent"
                        android:layout_height="1.0dip"
                        android:layout_marginLeft="4.0dip" />
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="90.0dip">
                    <ImageView
                        android:id="@+id/guide_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/discovery_female"
                        android:layout_marginLeft="0dp"/>
                    <ImageView
                        android:id="@+id/guide_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/discovery_male"
                        android:layout_marginLeft="45dp"/>
                    <!--
                    <TextView
                        android:textSize="12.0sp"
                        android:gravity="center"
                        android:id="@+id/guide_female_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discovery_guide_female_gender_text"
                        android:drawablePadding="4.0dip"/>
                    <TextView
                        android:textSize="12.0sp"
                        android:gravity="center"
                        android:id="@+id/guide_male_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45.0dip"
                        android:text="@string/discovery_guide_male_gender_text"
                        android:drawablePadding="4.0dip"/>
                    <TextView
                        android:textSize="12.0sp"
                        android:gravity="center"
                        android:id="@+id/guide_secret_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45.0dip"
                        android:text="@string/discovery_guide_secret_gender_text"
                        android:drawablePadding="4.0dip"/>
                        -->
                </LinearLayout>
                <TextView
                    android:background="@drawable/discovery_guide_start"
                    android:gravity="center"
                    android:id="@+id/discovery_rule_start"
                    android:paddingLeft="24.0dip"
                    android:paddingRight="24.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="160.0dip"
                    android:minHeight="48.0dip"
                    android:text="@string/discovery_guide_start"
                    android:textColor="@color/discovery_theme_color"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>
</com.freeme.discovery.view.GuideView>